# hotelium

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
hotelium/: booking.py  main.py  test_bs4.py  test_crawl.py  tripadvisor.py
notebooks/: module.ipynb  research.ipynb
