[tool.poetry]
name = "hotelium"
version = "0.1.0"
description = "Hotel crawler using Selenium and BS4"
authors = ["thangbuiq <buiquangthangtv@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
tqdm = "^4.66.5"
numpy = "<=2.1.2"
pandas = "^2.2.3"
blinker = "==1.7.0"
webdriver-manager = "^4.0.2"
selenium = "^4.25.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
